# HackPilot

./: .gitlab-ci.yml  DEPLOYMENT.md  README.md  app.py  constitution.md  pyproject.toml  requirements-dev.txt
hackpilot/: __init__.py  ai_provider.py  gemini.py  language.py  models.py  pipeline.py  prompts.py
hackpilot/features/: __init__.py  feasibility.py  idea_generator.py  pitch.py  planner.py  readme_gen.py  reviews.py
specs/001-hackpilot/: data-model.md  plan.md  research.md  spec.md  tasks.md
tests/: test_enhancements.py  test_feasibility.py  test_idea_generator.py  test_pipeline_gates.py  test_pitch.py  test_planner.py  test_readme_gen.py
